# sales-live-dash

./: README.md  pyproject.toml
dev/: gpu-spark-notebook.yaml  minio.yaml  service-account.yaml  spark-notebook.yaml  spark-operator-create-driver.sh  spark-operator-driver.Dockerfile  spark-operator-python-test.yaml
dev/base_notebook_image/: build_gpu_spark_notebook.sh  build_spark_notebook.sh
dev/minio/: minio.yaml  persistentvolumeclaim.yaml  storageClass.yaml
dev/rbac/: ds-deploy-cluster-role-binding.yaml  ds-deploy-cluster-role.yaml
image-files/rbac/: secret.yaml
image_files/base_notebook_image/: build_spark_notebook.sh  spark-notebook.Dockerfile
image_files/base_spark_image/: build_base_image.sh
notebook/: spark-k8s-test.ipynb
queries/: pagamentos_por_metodo.sql  pedidos_por_periodo_categoria.sql  resposta.docx  resultado_segmentacao_de_clientes.csv  resultados_pagamentos_por_metodo.csv  resultados_pedidos_periodo_categoria.csv  segmentacao_de_clientes.sql
sales_live_dash/re_engine/: Sistema Recomendacao.py
spark_on_k8s/: main.py  minio_test.py
tests/: minio_test.py  spark_test.py
yaml/ingress/: ingress.yaml
yaml/rbac/: service-account.yaml
