[tool.poetry]
name = "sales-live-dash"
version = "0.1.0"
description = ""
authors = ["Diego Bonesso <pixelrama@pm.me>"]
readme = "README.md"
packages = [{include = "sales_live_dash"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
