[tool.poetry]
name = "sales-live-dash"
version = "0.1.0"
description = ""
authors = ["Diego Bonesso <pixelrama@pm.me>"]
readme = "README.md"
packages = [{include = "sales_live_dash"}]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^1.5.3"
mlxtend = "^0.21.0"
fastapi = "^0.92.0"


[tool.poetry.group.dev.dependencies]
uvicorn = "^0.20.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
